--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dog API #1</title>
+    <title>Dog API #3</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Choose between 1 and 50 random dog images</h1>
+        <h1>Input a specific type of dog</h1>
 
         <form>
-            <input type="text" id="randomNumber" value="3">
+            <input type="text" id="dog-input" placeholder="e.g. hound">
             <input type="submit" value="submit">
         </form>
+        <section class=" results hidden">
+            <h2>Look here!</h2>
+            <img class="results-img">
+          
+
+
+        </section>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
